# adventofcode

./: .codeclimate.yml  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: black.yml  lint-test.yml
2015/day1/: exercise1.py  exercise2.py  read_input.py
2015/day2/: common.py  exercise1.py  exercise2.py  test_common.py  test_common_day2.py
2015/day3/: common.py  exercise1.py  exercise2.py
2015/day4/: exercise1.py  exercise2.py
2015/day5/: common.py  common_day5.py  exercise1.py  exercise2.py  test_common.py  test_common_day5.py
2015/day6/: common_day6.py  exercise1.py
2019/day1/: exercise1.py  exercise2.py  test.py  utils.py
2019/day2/: exercise1.py  exercise2.py  test.py  utils.py
2019/day3/: exercise1.py  exercise2.py  utils.py
2019/day4/: exercise1.py  exercise2.py  test.py  utils.py
2019/day6/: exercise1.py  exercise2.py
2019/day8/: exercise2.py
docker/: Dockerfile  requirements.txt  run.sh
src/app/: aoc.py  constants.py  utils.py
src/entities/: direction.py  point.py
src/functions/: functions.py  read_input.py
src/inputs/: constants.py  path.py
tests/2015/: test_2015day01.py  test_2015day02.py  test_2015day03.py  test_2015day04.py  test_2015day05.py  test_2015day06.py  test_2015day07.py  test_2015day08.py  test_2015day09.py  test_2015day10.py  test_2015day11.py  test_2015day12.py  test_2015day3.py  test_2015day4.py  test_2015day6.py  test_2015day7.py  test_2015day8.py  test_2015day9.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py
tests/2019/: test_2019day01.py  test_2019day02.py  test_2019day03.py  test_2019day04.py  test_2019day1.py  test_2019day2.py
tests/2020/: test_2020day01.py  test_2020day02.py  test_2020day03.py  test_2020day04.py  test_2020day05.py  test_2020day06.py  test_2020day07.py  test_2020day08.py  test_2020day09.py  test_2020day1.py  test_2020day10.py  test_2020day11.py  test_2020day12.py  test_2020day13.py  test_2020day14.py  test_2020day15.py  test_2020day16.py  test_2020day2.py  test_2020day3.py  test_2020day4.py  test_2020day5.py
tests/2021/: test_2021day01.py  test_2021day02.py  test_2021day03.py  test_2021day04.py
tests/2022/: test_2022day01.py  test_2022day02.py  test_2022day03.py  test_2022day04.py  test_2022day05.py  test_2022day06.py  test_2022day07.py  test_2022day08.py  test_2022day09.py  test_2022day10.py  (+12 more)
(+305 files in other folders)
