[project]
authors = [{ name = "Fabio Gallotti", email = "fabio.gallotti.93@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.2",
]
name = "adventofcode"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.uv]
dev-dependencies = ["pre-commit>=4.0.1", "pytest>=8.3.4", "ruff>=0.8.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
target-version = "py313"
line-length = 100
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
ignore = ["E712", "E741"] # TODO: remove these two ignores
