[project]
authors = [{ name = "Fabio Gallotti", email = "fabio.gallotti.93@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
]
name = "adventofcode"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = ["pre-commit>=4.5.0", "pytest>=9.0.1", "ruff>=0.14.8"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
target-version = "py313"
line-length = 100
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
ignore = ["E712", "E741"] # TODO: remove these two ignores
